- Fix issue for dialog on mobile with little content (not filling the whole screen). - Version 0.2.2

--- a/src/sixteen/components/_dialog.scss
+++ b/src/sixteen/components/_dialog.scss
@@ -84,6 +84,9 @@
     &__content{
         border-bottom: $dialog_content_border;
         background-color: $dialog_content_bg;
+        @include media($mobile) {
+            width: 100%;
+        }
         @include media($tablet) {
             border: $dialog_content_border;
             border-radius: $border-radius;
